# bevy_new_third_person

./: .gitignore  Cargo.toml  Cargo.toml.template  Makefile  Makefile.toml  README.md  README.md.template  post-generate.rhai  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml  release.yaml.template
assets/: config.ron  credits.ron  settings.ron
assets/models/: scene.gltf
assets/particles/: healing-zone.ron  sun-floor.ron  wind-spin.ron
assets/shaders/: cosmic_v2.wgsl  striped_tunnel.wgsl  tunnel.wgsl
src/: main.rs  third_party.rs
src/asset_loading/: mod.rs  ron.rs  tracking.rs
src/audio/: fade.rs  fdsp_host.rs  loop_region.rs  mod.rs  radio.rs  voice.rs
src/camera/: gamepad_cursor.rs  hdr.rs  mod.rs  third_person.rs  top_down.rs
src/game/: dev_tools.rs  dialogue.rs  mod.rs  mood.rs  music.rs
src/models/: config.rs  event_dispatch.rs  events.rs  ext_traits.rs  input.rs  keybinding.rs  mod.rs  states.rs
src/player/: animation.rs  control.rs  input.rs  mod.rs  particles.rs  sound.rs
src/scene/: cosmic_sphere.rs  mod.rs  screen_fade.rs  skybox.rs
src/screens/: credits.rs  gameplay.rs  mod.rs  splash.rs  title.rs
src/screens/loading/: mod.rs  preload_assets.rs  shader_compilation.rs  spawn_level.rs
src/ui/: constants.rs  interaction.rs  mod.rs  modal.rs  perf.rs  props.rs  text_edit.rs  widget.rs
src/ui/prefabs/: keybind_editor.rs  modals.rs  settings.rs
