[package]
name = "bevy_new_3d_rpg"
version = "0.1.8"
authors = ["Oleks Pickle <22867443+olekspickle@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
exclude = ["assets"]
repository = "https://github.com/olekspickle/bevy_new_3d_rpg"
description = "Simple but comprehensive 3D game template with gamepad support"
keywords = ["bevy", "game", "template", "devkit", "third person", "topdown", "gamedev"]

[dependencies.bevy]
version = "0.18"
default-features = false
features = [
    # TODO: change to this on 0.19 (thx Jan!)
    # "3d",
    # "jpeg",
    # "serialize",
    # "hotpatching",
    # "reflect_auto_register",
    # opinionated list without bevy_audio
    "default_app",
    "default_platform",
    "3d_api",
    "3d_bevy_render",
    "ui_api",
    "ui_bevy_render",
    "scene",
    "picking",
    "jpeg",
    "serialize",
    "hotpatching",
    "reflect_auto_register",
    "experimental_bevy_ui_widgets"
]

[dependencies]
bevy_fix_cursor_unlock_web = "0.3"
bevy_perf_ui = { version = "0.6", optional = true }                     # performance UI
bevy-inspector-egui = { version = "0.36", optional = true }             # entity inspector
bevy_skein = "0.5"                                                      # blender integration

bevy_third_person_camera = { version = "0.4", optional = true }         # 3rd person camera
bevy_top_down_camera = { version = "0.3", optional = true }             # top down camera

avian3d = { version = "0.6.0-rc.1", default-features = false, features = ["parry-f32", "3d", "f32"] }
bevy_sprinkles = "0.2.0"                                                # 3d particles
bevy_ahoy =   { version = "0.1.0-rc.6", default-features = false }      # character controller
bevy_enhanced_input = { version = "0.24", features = ["serialize"] }    # keyboard/gamepad input

bevy_shuffle_bag = "0.4"                                                # deterministically random container
bevy_seedling = { version = "0.7", features = ["hrtf"] }                # audio plugin using firewheel
firewheel = "0.10"

# dialogue
bevy_yarnspinner = "0.7"

# to play with
# bevy_open_vat
# bevy_wind_waker_shader


# misc
easy-ext = "1"
fundsp = "0.20"
image = "0.25.6"
ron = "0.10"
rand = "0.9"
serde = "1"
thiserror = "2"
# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }
# Compile low-severity logs out of builds for performance.
# Remove these features if you want to profile your game with tracy.
# (see <https://github.com/bevyengine/bevy/blob/main/docs/profiling.md#tracy-profiler>)
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_warn"] }


[features]
default = [ "dev_native", "third_person" ]
custom_cursor  = []
fpv = []
top_down = ["bevy_top_down_camera"]
third_person = ["bevy_third_person_camera"]
native = [ "enhanced" ]
web = [ "bevy/webgpu", "bevy_seedling/web_audio", "third_person" ]
dev = [
    "bevy_perf_ui",
    "bevy/bevy_dev_tools",
    "bevy-inspector-egui",
    "bevy/bevy_ui_debug",
    "bevy/track_location",          # Improve error messages coming from Bevy
    # "bevy/debug_glam_assert",       # when need to debug physics\collider issues
]
dev_native = [
    "dev",
    "native",
    "bevy/dev",                     # Enable aggressive file watcher
    "custom_cursor",
    "bevy/bevy_remote",             # Enable remote protocol for 3rd party extensions and plugins
    "bevy/dynamic_linking",         # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/embedded_watcher",        # Enable embedded asset hot reloading for native dev builds.
]
enhanced = [
    "bevy/meshlet",                 # new nanite-like rendering system
    "bevy/meshlet_processor",       # Enables processing meshes into meshlet meshes for bevy_pbr
    "bevy/pbr_light_textures",      # PBR light textures
    "bevy/pbr_specular_textures",   # PBR specular maps

]
debug = [
    "bevy/trace_tracy",
    "bevy/debug"
]


# LINT
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
type_complexity = "allow"           # Queries may access many components, which would undesirably trigger this lint.
collapsible_if = "allow"           # Queries may access many components, which would undesirably trigger this lint.
nonstandard_macro_braces = "warn"   # Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.

[patch.crates-io]
bevy_ahoy = { git = "https://github.com/janhohenheim/bevy_ahoy" }
bevy_perf_ui = { git = "https://github.com/olekspickle/perf_ui" }
bevy_sprinkles = { git = "https://github.com/olekspickle/sprinkles" }

